--- a/index.html
+++ b/index.html
@@ -7,14 +7,49 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
-    <h1>hola mundo</h1>
-    
-    <div id="liveAlertPlaceholder"></div>
-    <button type="button" class="btn btn-primary" id="liveAlertBtn">Show live alert</button>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container text-white">
+            <div class="display-3 me-3 text-warning ">
+                <i class="fa-brands fa-js"></i>
+            </div>
+            <div class="row mt-2 ">
+                <p class="fw-bolder h4 col-md-12 col-md-12">ANDRES HG</p>
+                <p class="fw-bold  col-sm-12 col-md-12">Frontend Developer</p>
+            </div>
+          <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+              <li class="nav-item me-5">
+                <a class="nav-link text-white" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item me-5">
+                <a class="nav-link text-white" href="#">About me</a>
+              </li>
+              <li class="nav-item me-5">
+                <a class="nav-link text-white" aria-current="page" href="#">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <button class="btn btn-sm btn-outline-light rounded-pill">Contact me</button>
+          </div>
+        </div>
+      </nav>
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/94efe4d79c.js" crossorigin="anonymous"></script>
 </body>
 </html>
