--- a/index.html
+++ b/index.html
@@ -7,49 +7,87 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container text-white">
-            <div class="display-3 me-3 text-warning ">
-                <i class="fa-brands fa-js"></i>
-            </div>
-            <div class="row mt-2 ">
-                <p class="fw-bolder h4 col-md-12 col-md-12">ANDRES HG</p>
-                <p class="fw-bold  col-sm-12 col-md-12">Frontend Developer</p>
-            </div>
-          <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-              <li class="nav-item me-5">
-                <a class="nav-link text-white" aria-current="page" href="#">Home</a>
+  <nav class="navContFlex d-flex justify-content-between mx-5 my-4">
+      <div class="mt-1">
+        <p class="h4 fw-bolder text-white">ANDRES</p>
+      </div>
+        <div class="navigation nav">
+          <a class="nav-link hover" href="#"><p class="h6 fw-bold text-white">About Me</p></a>
+          <a class="nav-link hover" href="#"><p class="h6 fw-bold text-white">Portfolio</p></a>
+          <a class="nav-link hover" href="#"><p class="h6 fw-bold text-white">Contact Me</p></a>
+        </div>
+      <div>
+        <button class="btn text-warning"><i class="bi bi-moon-stars-fill"></i></button>
+      </div>
+  </nav>
+
+  <main class="mt-5">
+    <section class="mt-5"> 
+      <div class="container-sm container-md container-lg container-fluid text-center text-white">
+          <h1 class="display-2 fw-bolder mb-5">Fullstack Developer</h1>
+          <p class="h6 mb-5">
+            { Html5,  Css3,  Bootstrap,  Javascript,  React,  Python,  Flask }
+          </p>
+          <p class="mt-5">
+            Student of Html, Css & React.js. I leverage  technologies to bring web projects to life. 
+          </p>
+          <a class="btn btn-primary fw-bold rounded mt-5" href="https://github.com/AndHoyosGarzon?tab=repositories" target="_blank">See my dev work</a>
+          <div class="contImg">
+            <img src="./img/teclado.png" alt="keyboard">
+          </div>
+      </div>
+    </section>
+    <section>
+      <div class="container-sm container-md container-lg container-fluid text-center text-white">
+          <h2 class="display-3 fw-bold">A Little More</h2>
+          <p class="mt-5 h6">
+            <i class="bi bi-arrow-right-short text-warning me-2"></i>
+            I am currently studying fullstack web development at 
+            <a class="fw-bold" href="https://4geeks.com/es" target="_blank">4geeksAcademy</a> Chile.
+            I have had the opportunity to learn and practice the following technologies:
+            <ul class="list fw-bold d-flex  justify-content-evenly">
+              <li class="ms-5 logo">
+                <img src="./img/logos_TI/png-clipart-github-repository-git-project-commit-github-angle-logo-removebg-preview.png" alt="Git">
               </li>
-              <li class="nav-item me-5">
-                <a class="nav-link text-white" href="#">About me</a>
+              <li class="ms-5  logo">
+                <img class="bg-light rounded" src="./img/logos_TI/github-removebg-preview.png" alt="GitHub">
               </li>
-              <li class="nav-item me-5">
-                <a class="nav-link text-white" aria-current="page" href="#">Portfolio</a>
+              <li class="ms-5  logo">
+                <img src="./img/logos_TI/html5-removebg-preview.png" alt="Html5">
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Blog</a>
+              <li class="ms-5 logo">
+                <img src="./img/logos_TI/css3-removebg-preview.png" alt="Css3">
+              </li>
+              <li class="ms-5 logo">
+                <img src="./img/logos_TI/Bootstrap-removebg-preview.png" alt="Bootstrap">
+              </li>
+              <li class="ms-5 logo">
+                <img src="./img/logos_TI/JS-removebg-preview.png" alt="Javascript">
+              </li>
+              <li class="ms-5 logo">
+                <img src="./img/logos_TI/reactJS-removebg-preview.png" alt="React">
+              </li>
+              <li class="ms-5 logo">
+                <img src="./img/logos_TI/python-removebg-preview.png" alt="Phyton">
+              </li>
+              <li class="ms-5 logo">
+                <img class="bg-light rounded" src="./img/logos_TI/flask-removebg-preview.png" alt="Flask">
               </li>
             </ul>
-          </div>
-          <div>
-            <button class="btn btn-sm btn-outline-light rounded-pill">Contact me</button>
-          </div>
-        </div>
-      </nav>
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+          </p> 
+          <p class="mt-5">
+            <i class="bi bi-arrow-right-short text-warning me-2"></i>
+            I am highly disciplined and I like to acquire new knowledge.
+          </p>
+      </div>
+    </section>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/94efe4d79c.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/94efe4d79c.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
