--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body id="body">
   <nav class="navContFlex d-flex justify-content-between mx-5 my-4">
       <div class="mt-1">
-        <p class="h4 fw-bolder text-white">ANDRES</p>
+        <p class="h4 fw-bolder">ANDRES</p>
       </div>
         <div class="navigation nav">
-          <a class="nav-link hover" href="#"><p class="h6 fw-bold text-white">About Me</p></a>
-          <a class="nav-link hover" href="#"><p class="h6 fw-bold text-white">Portfolio</p></a>
-          <a class="nav-link hover" href="#"><p class="h6 fw-bold text-white">Contact Me</p></a>
+          <a class="nav-link hover" href="#"><p class="h6 fw-bold">About Me</p></a>
+          <a class="nav-link hover" href="#"><p class="h6 fw-bold">Portfolio</p></a>
+          <a class="nav-link hover" href="#"><p class="h6 fw-bold">Contact Me</p></a>
         </div>
-      <div>
-        <button class="btn text-warning"><i class="bi bi-moon-stars-fill"></i></button>
+      <div id="darkMode">
+        <button id="btnDarkMode" class="btn"><i class="bi bi-moon-stars-fill"></i></button>
       </div>
   </nav>
 
   <main class="mt-5">
     <section class="mt-5"> 
-      <div class="container-sm container-md container-lg container-fluid text-center text-white">
+      <div class="container-sm container-md container-lg container-fluid text-center">
           <h1 class="display-2 fw-bolder mb-5">Fullstack Developer</h1>
           <p class="h6 mb-5">
             { Html5,  Css3,  Bootstrap,  Javascript,  React,  Python,  Flask }
@@ -41,7 +41,7 @@
       </div>
     </section>
     <section>
-      <div class="container-sm container-md container-lg container-fluid text-center text-white">
+      <div class="container-sm container-md container-lg container-fluid text-center">
           <h2 class="display-3 fw-bold">A Little More</h2>
           <p class="mt-5 h6">
             <i class="bi bi-arrow-right-short text-warning me-2"></i>
@@ -85,6 +85,11 @@
       </div>
     </section>
   </main>
+
+
+
+
+  <script src="./js/app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/94efe4d79c.js" crossorigin="anonymous"></script>
