feat: edit DarkMode

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       <div class="mt-1">
         <p class="h4 fw-bolder">ANDRES</p>
       </div>
-        <div class="navigation nav">
-          <a class="nav-link hover" href="#"><p class="h6 fw-bold">About Me</p></a>
-          <a class="nav-link hover" href="#"><p class="h6 fw-bold">Portfolio</p></a>
-          <a class="nav-link hover" href="#"><p class="h6 fw-bold">Contact Me</p></a>
+        <div class="d-flex mt-2">
+          <p class="h6 fw-bold hover">About Me</p>
+          <p class="h6 fw-bold mx-5 hover">Portfolio</p>
+          <p class="h6 fw-bold hover">Contact Me</p>
         </div>
-      <div id="darkMode">
-        <button id="btnDarkMode" class="btn"><i class="bi bi-moon-stars-fill"></i></button>
+      <div>
+       <label for="toggle"><i class="bi bi-moon-stars-fill"></i></label>
+       <input class="inpHidden" type="checkbox" id="toggle">
       </div>
   </nav>
 
